--- a/index.html
+++ b/index.html
@@ -4,65 +4,120 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matthew Lacson | CS Portfolio</title>
-  <link rel="stylesheet" 
+  <link rel="stylesheet" href="style.css" />
 </head>
-  <body>
-    <header>
-      <h1>Matthew Lacson</h1>
-      <p>Computer Science Major @ UNLV</p>
-      <nav>
-        <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">Contact</a>a
-      </nav>
-    </header>
 
-    <section class="about">
-      <h2>About Me</h2>
-      <p>
-        I'm a Computer Science major at UNLV with interests in software development,
-      systems, and clean, well-structured code. I enjoy turning ideas into working
-      programs and continuously improving my technical skills.
+<body>
+  <!-- Top Nav -->
+  <header class="topbar">
+    <a class="logo" href="#">mattlacson</a>
+
+    <nav class="nav">
+      <a href="#work">Work</a>
+      <a href="#about">About</a>
+      <a class="icon" href="https://github.com/YOUR_GITHUB" target="_blank" rel="noopener">GitHub</a>
+      <a class="icon" href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener">LinkedIn</a>
+      <a class="icon" href="mailto:YOUR_EMAIL">Email</a>
+    </nav>
+  </header>
+
+  <main class="container">
+    <!-- Hero -->
+    <section class="hero" id="about">
+      <h1>Hello there, I’m Matthew.</h1>
+      <p class="subhead">
+        A <strong>Computer Science major</strong> at UNLV interested in building clean, practical software —
+        from low-level systems work to polished web experiences.
+      </p>
+
+      <p class="meta">
+        Currently focused on: <span>C++</span> · <span>SQL</span> · <span>Git/GitHub</span> · <span>Computer Architecture</span>
       </p>
     </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
+    <!-- Work -->
+    <section class="work" id="work">
+      <div class="section-title">
+        <h2>Work</h2>
+        <p>Selected projects (more on GitHub).</p>
+      </div>
 
-  <div class="project">
-      <h3>Project Title</h3>
-      <p>
-        Brief description of what you built, the problem it solves,
-        and what technologies you used.
-      </p>
-      <a href="#" target="_blank">GitHub</a>
-    </div>
+      <div class="project-grid">
+        <!-- Project Card -->
+        <article class="project">
+          <div class="project-tag">01</div>
+          <h3>MIPS Pipeline / Datapath Notes + Practice</h3>
+          <p>
+            A structured study resource with diagrams + explanations of hazards, forwarding, CPI, and instruction flow.
+            Built to make architecture concepts easier to review quickly.
+          </p>
+          <div class="project-links">
+            <a href="https://github.com/YOUR_GITHUB/REPO1" target="_blank" rel="noopener">GitHub</a>
+            <a href="#" target="_blank" rel="noopener">Demo</a>
+          </div>
+        </article>
 
-        <!-- Duplicate this block for more projects -->
-  </section>
+        <article class="project">
+          <div class="project-tag">02</div>
+          <h3>SQL Stored Procedures Practice Set</h3>
+          <p>
+            A collection of stored procedures, transactions, and cursor patterns written to match class syntax rules.
+            Focused on correctness + readability.
+          </p>
+          <div class="project-links">
+            <a href="https://github.com/YOUR_GITHUB/REPO2" target="_blank" rel="noopener">GitHub</a>
+            <a href="#" target="_blank" rel="noopener">Writeup</a>
+          </div>
+        </article>
 
+        <article class="project">
+          <div class="project-tag">03</div>
+          <h3>C++ Debugging / Code Help Examples</h3>
+          <p>
+            Small C++ programs + debugging notes showing how I approach bugs, edge cases, and performance improvements.
+          </p>
+          <div class="project-links">
+            <a href="https://github.com/YOUR_GITHUB/REPO3" target="_blank" rel="noopener">GitHub</a>
+            <a href="#" target="_blank" rel="noopener">Demo</a>
+          </div>
+        </article>
+      </div>
+    </section>
 
-     <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>C++</li>
-      <li>Python</li>
-      <li>SQL</li>
-      <li>Git & GitHub</li>
-    </ul>
-  </section>
+    <!-- About (short + clean) -->
+    <section class="about">
+      <div class="section-title">
+        <h2>About</h2>
+        <p>A bit more context.</p>
+      </div>
 
-      <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: themattlacson@email.com</p>
-    <p>
-      <a href="#">GitHub</a> |
-      <a href="#">LinkedIn</a>
-    </p>
-  </section>
+      <div class="about-box">
+        <p>
+          I’m a CS major who likes both the “how it works” side (architecture, systems, debugging)
+          and the “how it feels” side (clear UI, good UX, clean writing).
+        </p>
+        <p>
+          I’m currently building more portfolio-worthy projects and looking for opportunities to grow through
+          internships, freelance work, or collaborative projects.
+        </p>
 
-      <footer>
-        </p>© 2025 Matthew Lacson</p>
-      </footer>
-  </body>
-  </html>
+        <div class="pill-row" id="skills">
+          <span class="pill">C++</span>
+          <span class="pill">Python</span>
+          <span class="pill">SQL</span>
+          <span class="pill">Git/GitHub</span>
+          <span class="pill">MIPS / Architecture</span>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer" id="contact">
+      <p>© <span id="year"></span> Matthew Lacson</p>
+    </footer>
+  </main>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
