--- a/index.html
+++ b/index.html
@@ -36,53 +36,73 @@
     </section>
 
     <!-- Work -->
-    <section class="work" id="work">
-      <div class="section-title">
-        <h2>Work</h2>
-        <p>Selected projects (more on GitHub).</p>
+   <section class="work" id="work">
+  <div class="section-title">
+    <h2>Work</h2>
+    <p>Selected projects (more on GitHub).</p>
+  </div>
+
+  <!-- Project 01 (image left, text right) -->
+  <article class="feature">
+    <div class="feature-media">
+      <img src="images/project1.png" alt="Project 1 preview" />
+    </div>
+
+    <div class="feature-body">
+      <h3><span class="num">01.</span> MIPS Pipeline / Datapath Notes + Practice</h3>
+      <p>
+        Structured study resource with diagrams + explanations of hazards, forwarding, CPI,
+        and instruction flow. Built to review architecture concepts quickly.
+      </p>
+
+      <div class="feature-actions">
+        <a class="btn" href="https://github.com/mattlacson/REPO1" target="_blank" rel="noopener">View Project</a>
+        <a class="link" href="https://github.com/mattlacson/REPO1" target="_blank" rel="noopener">GitHub →</a>
       </div>
+    </div>
+  </article>
 
-      <div class="project-grid">
-        <!-- Project Card -->
-        <article class="project">
-          <div class="project-tag">01</div>
-          <h3>MIPS Pipeline / Datapath Notes + Practice</h3>
-          <p>
-            A structured study resource with diagrams + explanations of hazards, forwarding, CPI, and instruction flow.
-            Built to make architecture concepts easier to review quickly.
-          </p>
-          <div class="project-links">
-            <a href="https://github.com/YOUR_GITHUB/REPO1" target="_blank" rel="noopener">GitHub</a>
-            <a href="#" target="_blank" rel="noopener">Demo</a>
-          </div>
-        </article>
+  <!-- Project 02 (text left, image right) -->
+  <article class="feature reverse">
+    <div class="feature-media">
+      <img src="images/project2.png" alt="Project 2 preview" />
+    </div>
 
-        <article class="project">
-          <div class="project-tag">02</div>
-          <h3>SQL Stored Procedures Practice Set</h3>
-          <p>
-            A collection of stored procedures, transactions, and cursor patterns written to match class syntax rules.
-            Focused on correctness + readability.
-          </p>
-          <div class="project-links">
-            <a href="https://github.com/YOUR_GITHUB/REPO2" target="_blank" rel="noopener">GitHub</a>
-            <a href="#" target="_blank" rel="noopener">Writeup</a>
-          </div>
-        </article>
+    <div class="feature-body">
+      <h3><span class="num">02.</span> SQL Stored Procedures Practice Set</h3>
+      <p>
+        Collection of stored procedures, transactions, and cursor patterns written to match class rules.
+        Focused on correctness + readability.
+      </p>
 
-        <article class="project">
-          <div class="project-tag">03</div>
-          <h3>C++ Debugging / Code Help Examples</h3>
-          <p>
-            Small C++ programs + debugging notes showing how I approach bugs, edge cases, and performance improvements.
-          </p>
-          <div class="project-links">
-            <a href="https://github.com/YOUR_GITHUB/REPO3" target="_blank" rel="noopener">GitHub</a>
-            <a href="#" target="_blank" rel="noopener">Demo</a>
-          </div>
-        </article>
+      <div class="feature-actions">
+        <a class="btn" href="https://github.com/mattlacson/REPO2" target="_blank" rel="noopener">View Project</a>
+        <a class="link" href="https://github.com/mattlacson/REPO2" target="_blank" rel="noopener">GitHub →</a>
       </div>
-    </section>
+    </div>
+  </article>
+
+  <!-- Project 03 (image left, text right) -->
+  <article class="feature">
+    <div class="feature-media">
+      <img src="images/project3.png" alt="Project 3 preview" />
+    </div>
+
+    <div class="feature-body">
+      <h3><span class="num">03.</span> C++ Debugging / Code Help Examples</h3>
+      <p>
+        Small C++ programs + debugging notes showing how I approach bugs, edge cases,
+        and performance improvements.
+      </p>
+
+      <div class="feature-actions">
+        <a class="btn" href="https://github.com/mattlacson/REPO3" target="_blank" rel="noopener">View Project</a>
+        <a class="link" href="https://github.com/mattlacson/REPO3" target="_blank" rel="noopener">GitHub →</a>
+      </div>
+    </div>
+  </article>
+</section>
+
 
     <!-- About (short + clean) -->
     <section class="about">
