--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-  <!-- Top Nav -->
+  <!-- Top Navigation -->
   <header class="topbar">
     <a class="logo" href="#">mattlacson</a>
 
     <nav class="nav">
       <a href="#work">Work</a>
       <a href="#about">About</a>
-      <a class="icon" href="https://github.com/YOUR_GITHUB" target="_blank" rel="noopener">GitHub</a>
-      <a class="icon" href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener">LinkedIn</a>
-      <a class="icon" href="mailto:YOUR_EMAIL">Email</a>
+      <a href="https://github.com/mattlacson" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a>
+      <a href="mailto:YOUR_EMAIL">Email</a>
     </nav>
   </header>
 
@@ -25,86 +25,88 @@
     <!-- Hero -->
     <section class="hero" id="about">
       <h1>Hello there, I’m Matthew.</h1>
+
       <p class="subhead">
-        A <strong>Computer Science major</strong> at UNLV interested in building clean, practical software —
-        from low-level systems work to polished web experiences.
+        A <strong>Computer Science major</strong> at UNLV interested in building clean,
+        practical software — from low-level systems work to polished web experiences.
       </p>
 
       <p class="meta">
-        Currently focused on: <span>C++</span> · <span>SQL</span> · <span>Git/GitHub</span> · <span>Computer Architecture</span>
+        Currently focused on:
+        <span>C++</span> · <span>SQL</span> · <span>Git/GitHub</span> · <span>Computer Architecture</span>
       </p>
     </section>
 
     <!-- Work -->
-   <section class="work" id="work">
-  <div class="section-title">
-    <h2>Work</h2>
-    <p>Selected projects (more on GitHub).</p>
-  </div>
-
-  <!-- Project 01 (image left, text right) -->
-  <article class="feature">
-    <div class="feature-media">
-      <img src="images/project1.png" alt="Project 1 preview" />
-    </div>
-
-    <div class="feature-body">
-      <h3><span class="num">01.</span> MIPS Pipeline / Datapath Notes + Practice</h3>
-      <p>
-        Structured study resource with diagrams + explanations of hazards, forwarding, CPI,
-        and instruction flow. Built to review architecture concepts quickly.
-      </p>
-
-      <div class="feature-actions">
-        <a class="btn" href="https://github.com/mattlacson/REPO1" target="_blank" rel="noopener">View Project</a>
-        <a class="link" href="https://github.com/mattlacson/REPO1" target="_blank" rel="noopener">GitHub →</a>
+    <section class="work" id="work">
+      <div class="section-title">
+        <h2>Work</h2>
+        <p>Selected projects (more on GitHub).</p>
       </div>
-    </div>
-  </article>
 
-  <!-- Project 02 (text left, image right) -->
-  <article class="feature reverse">
-    <div class="feature-media">
-      <img src="images/project2.png" alt="Project 2 preview" />
-    </div>
+      <!-- Project 01 -->
+      <article class="feature">
+        <div class="feature-media">
+          <img src="images/project1.png" alt="MIPS Pipeline Project" />
+        </div>
 
-    <div class="feature-body">
-      <h3><span class="num">02.</span> SQL Stored Procedures Practice Set</h3>
-      <p>
-        Collection of stored procedures, transactions, and cursor patterns written to match class rules.
-        Focused on correctness + readability.
-      </p>
+        <div class="feature-body">
+          <h3><span class="num">01.</span> MIPS Pipeline / Datapath Notes + Practice</h3>
+          <p>
+            A structured study resource with diagrams and explanations of hazards,
+            forwarding, CPI, and instruction flow. Built to make architecture concepts
+            easier to review and understand.
+          </p>
 
-      <div class="feature-actions">
-        <a class="btn" href="https://github.com/mattlacson/REPO2" target="_blank" rel="noopener">View Project</a>
-        <a class="link" href="https://github.com/mattlacson/REPO2" target="_blank" rel="noopener">GitHub →</a>
-      </div>
-    </div>
-  </article>
+          <div class="feature-actions">
+            <a class="btn" href="https://github.com/mattlacson/REPO1" target="_blank">View Project</a>
+            <a class="link" href="https://github.com/mattlacson/REPO1" target="_blank">GitHub →</a>
+          </div>
+        </div>
+      </article>
 
-  <!-- Project 03 (image left, text right) -->
-  <article class="feature">
-    <div class="feature-media">
-      <img src="images/project3.png" alt="Project 3 preview" />
-    </div>
+      <!-- Project 02 -->
+      <article class="feature reverse">
+        <div class="feature-media">
+          <img src="images/project2.png" alt="SQL Stored Procedures Project" />
+        </div>
 
-    <div class="feature-body">
-      <h3><span class="num">03.</span> C++ Debugging / Code Help Examples</h3>
-      <p>
-        Small C++ programs + debugging notes showing how I approach bugs, edge cases,
-        and performance improvements.
-      </p>
+        <div class="feature-body">
+          <h3><span class="num">02.</span> SQL Stored Procedures Practice Set</h3>
+          <p>
+            A collection of stored procedures, transactions, and cursor patterns written
+            to match class syntax rules. Focused on correctness, clarity, and consistency.
+          </p>
 
-      <div class="feature-actions">
-        <a class="btn" href="https://github.com/mattlacson/REPO3" target="_blank" rel="noopener">View Project</a>
-        <a class="link" href="https://github.com/mattlacson/REPO3" target="_blank" rel="noopener">GitHub →</a>
-      </div>
-    </div>
-  </article>
-</section>
+          <div class="feature-actions">
+            <a class="btn" href="https://github.com/mattlacson/REPO2" target="_blank">View Project</a>
+            <a class="link" href="https://github.com/mattlacson/REPO2" target="_blank">GitHub →</a>
+          </div>
+        </div>
+      </article>
 
+      <!-- Project 03 -->
+      <article class="feature">
+        <div class="feature-media">
+          <img src="images/project3.png" alt="C++ Debugging Examples" />
+        </div>
 
-    <!-- About (short + clean) -->
+        <div class="feature-body">
+          <h3><span class="num">03.</span> C++ Debugging / Code Help Examples</h3>
+          <p>
+            Small C++ programs and debugging notes showing how I approach bugs,
+            edge cases, and performance improvements.
+          </p>
+
+          <div class="feature-actions">
+            <a class="btn" href="https://github.com/mattlacson/REPO3" target="_blank">View Project</a>
+            <a class="link" href="https://github.com/mattlacson/REPO3" target="_blank">GitHub →</a>
+          </div>
+        </div>
+      </article>
+    </section>
+
+    <!-- About -->
     <section class="about">
       <div class="section-title">
         <h2>About</h2>
@@ -113,15 +115,12 @@
 
       <div class="about-box">
         <p>
-          I’m a CS major who likes both the “how it works” side (architecture, systems, debugging)
-          and the “how it feels” side (clear UI, good UX, clean writing).
-        </p>
-        <p>
-          I’m currently building more portfolio-worthy projects and looking for opportunities to grow through
-          internships, freelance work, or collaborative projects.
+          I enjoy understanding how systems work under the hood while also caring
+          about clarity, structure, and usability. I’m always looking to improve my
+          fundamentals and build projects that feel solid and intentional.
         </p>
 
-        <div class="pill-row" id="skills">
+        <div class="pill-row">
           <span class="pill">C++</span>
           <span class="pill">Python</span>
           <span class="pill">SQL</span>
@@ -131,7 +130,7 @@
       </div>
     </section>
 
-    <footer class="footer" id="contact">
+    <footer class="footer">
       <p>© <span id="year"></span> Matthew Lacson</p>
     </footer>
   </main>
