--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <a href="#publications">Publications</a>
       <a href="#about">About</a>
       <a href="https://github.com/mattlacson" target="_blank" rel="noopener">GitHub</a>
-      <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener">LinkedIn</a>
-      <a href="mailto:YOUR_EMAIL">Email</a>
+      <a href="https://www.linkedin.com/in/matt-lacson-457945254/" target="_blank" rel="noopener">LinkedIn</a>
+      <a href="mailto:themattlacson@gmail.com">Email</a>
     </nav>
   </header>
 
