--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Matthew Lacson | CS Portfolio</title>
+  <title>Matthew Lacson | Portfolio</title>
+  <meta name="description" content="Matthew Lacson — CS major at UNLV. Projects in UI/UX, systems, and practical software." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <!-- Top Navigation -->
   <header class="topbar">
-    <a class="logo" href="#">mattlacson</a>
+    <a class="logo" href="#top">mattlacson</a>
 
     <nav class="nav">
       <a href="#work">Work</a>
@@ -22,14 +23,14 @@
     </nav>
   </header>
 
-  <main class="container">
+  <main class="container" id="top">
     <!-- Hero -->
     <section class="hero" id="about">
       <h1>Hello there, I’m Matthew.</h1>
 
       <p class="subhead">
-        A <strong>Computer Science major</strong> at UNLV who enjoys building clean, practical software —
-        and also cares about UI/UX, clarity, and usability.
+        A <strong>Computer Science major</strong> at UNLV interested in building clean, practical software —
+        from low-level problem-solving to polished user experiences.
       </p>
 
       <p class="meta">
@@ -42,29 +43,37 @@
     <section class="work" id="work">
       <div class="section-title">
         <h2>Work</h2>
-        <p>Selected projects (PDFs available).</p>
+        <p>Selected projects (with case study PDFs).</p>
       </div>
 
       <!-- Project 01: Overwatch UX/UI -->
       <article class="feature">
         <div class="feature-media">
-          <!-- Replace this with a real screenshot image when you have it -->
-          <img src="images/overwatch-preview.png" alt="Overwatch 2 UX/UI Project Preview" />
+          <img src="assets/overwatch-preview.png" alt="Overwatch 2 UX/UI case study preview" loading="lazy" />
         </div>
 
         <div class="feature-body">
           <h3><span class="num">01.</span> Overwatch 2 UX/UI Case Study</h3>
-          <p>
-            UX/UI redesign exploring interface clarity, game flow improvements, and accessibility
-            considerations. Includes process work, mockups, and usability insights.
+
+          <!-- Make it crystal clear what it is (UX polish) -->
+          <p class="clarity">
+            <strong>What it is:</strong> A 7-week UX/UI redesign case study for Overwatch 2 focused on improving
+            <strong>game flow</strong>, <strong>interface clarity</strong>, and <strong>accessibility</strong> (color blindness).
           </p>
+
+          <ul class="bullets" aria-label="Overwatch case study highlights">
+            <li><strong>Role:</strong> UX Researcher · UI Designer · Usability Tester</li>
+            <li><strong>Process:</strong> journey map → paper prototype → flowchart → wireframes → usability tests → UI mockups</li>
+            <li><strong>Tools:</strong> Figma · Adobe Photoshop</li>
+          </ul>
+
           <p class="pdf-note">PDF · UX/UI case study</p>
 
           <div class="feature-actions">
-            <a class="btn" href="overwatch-ux-ui.pdf" target="_blank" rel="noopener">
+            <a class="btn" href="assets/overwatch-ux-ui.pdf" target="_blank" rel="noopener">
               View Case Study (PDF)
             </a>
-            <a class="link" href="overwatch-ux-ui.pdf" download>
+            <a class="link" href="assets/overwatch-ux-ui.pdf" download>
               Download PDF →
             </a>
           </div>
@@ -82,23 +91,31 @@
       <!-- Publication 01: eBook -->
       <article class="feature reverse">
         <div class="feature-media">
-          <!-- Replace this with your real ebook cover image -->
-          <img src="images/ebook-cover.png" alt="Earn Smarter with AI eBook cover" />
+          <img src="assets/ebook-cover.png" alt="Earn Smarter with AI eBook cover" loading="lazy" />
         </div>
 
         <div class="feature-body">
           <h3><span class="num">01.</span> Earn Smarter with AI (eBook)</h3>
-          <p>
-            A practical guide to starting AI-powered side hustles, including a 7-day action plan and
-            frameworks for consistency and growth.
+
+          <!-- Make it crystal clear what it is (UX polish) -->
+          <p class="clarity">
+            <strong>What it is:</strong> A practical guide that breaks down realistic ways to use AI to build income —
+            including beginner-friendly examples and action steps.
           </p>
+
+          <ul class="bullets" aria-label="Ebook highlights">
+            <li><strong>Format:</strong> PDF guide / ebook</li>
+            <li><strong>Topics:</strong> AI-assisted freelancing, digital products, content automation, consistency frameworks</li>
+            <li><strong>Goal:</strong> “Start now” clarity — low-friction steps that actually get you moving</li>
+          </ul>
+
           <p class="pdf-note">PDF · eBook / guide</p>
 
           <div class="feature-actions">
-            <a class="btn" href="earn-smarter-with-ai.pdf" target="_blank" rel="noopener">
+            <a class="btn" href="assets/earn-smarter-with-ai.pdf" target="_blank" rel="noopener">
               Read eBook (PDF)
             </a>
-            <a class="link" href="earn-smarter-with-ai.pdf" download>
+            <a class="link" href="assets/earn-smarter-with-ai.pdf" download>
               Download →
             </a>
           </div>
@@ -116,12 +133,11 @@
       <div class="about-box">
         <p>
           I’m a CS major who likes both the “how it works” side (architecture, systems, debugging)
-          and the “how it feels” side (clear UI, good UX, clean writing). I’m currently building more
-          portfolio-worthy projects and looking for opportunities to grow through internships, freelance
-          work, or collaboration.
+          and the “how it feels” side (clear UI, good UX, clean writing). I’m building more portfolio-worthy
+          projects and looking for opportunities to grow through internships, freelance work, or collaboration.
         </p>
 
-        <div class="pill-row">
+        <div class="pill-row" aria-label="Skills">
           <span class="pill">C++</span>
           <span class="pill">Python</span>
           <span class="pill">SQL</span>
