--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <h1>Hello there, I’m Matthew.</h1>
 
       <p class="subhead">
-        A <strong>Computer Science major</strong> at UNLV with a strong interest in systems, problem-solving, and software fundamentals.
-        Alongside that, I enjoy applying UI/UX principles to make complex functionality feel clear and usable through thoughtful interface design and user-centered decisions.
+        A <strong>Computer Science major</strong> at UNLV who focuses on building software that works well and feels good to use.
+        I’m particularly interested in UI/UX, where technical decisions directly shape user experience, accessibility, and clarity.
       </p>
 
       <p class="meta">
