Add Squid Game Text-Based Simulation section
Added a new project section for a C++ text-based simulation inspired by Squid Game, including details about its features and GitHub link.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,43 @@
           </div>
         </div>
       </article>
+
+
+      <!-- Project 03: Squid Game Text-Based Simulation -->
+<article class="feature">
+  <div class="feature-media">
+    <!-- Simple visual placeholder is fine for code projects -->
+    <div class="code-placeholder">
+      C++<br>Text-Based<br>Simulation
+    </div>
+  </div>
+
+  <div class="feature-body">
+    <h3><span class="num">03.</span> Squid Game Text-Based Simulation (C++)</h3>
+
+    <p class="clarity">
+      <strong>What it is:</strong> A C++ text-based game simulation inspired by
+      <em>Squid Game</em>, focused on game logic, state management, and NPC behavior
+      rather than graphics.
+    </p>
+
+    <ul class="bullets">
+      <li><strong>Core features:</strong> AI-like NPC decision logic, reputation system, multiple game modes</li>
+      <li><strong>CS focus:</strong> control flow, data structures, object-oriented design</li>
+      <li><strong>Language:</strong> C++</li>
+    </ul>
+
+    <p class="pdf-note">C++ project · Text-based simulation</p>
+
+    <div class="feature-actions">
+      <a class="btn"
+         href="https://github.com/mattlacson/YOUR_REPO_NAME"
+         target="_blank" rel="noopener">
+        View on GitHub
+      </a>
+    </div>
+  </div>
+</article>
     </section>
 
     <!-- PUBLICATIONS -->
