Update feature media to include project cover image
Replaced code placeholder with an image for the project cover.

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
 
       <!-- Project 02: Squid Game Text-Based Simulation -->
 <article class="feature">
-  <div class="feature-media">
-    <!-- Simple visual placeholder is fine for code projects -->
-    <div class="code-placeholder">
-      C++<br>Text-Based<br>Simulation
-    </div>
-  </div>
+<div class="feature-media">
+  <img
+    src="assets/squidgame-cover.png"
+    alt="Squid Game text-based simulation C++ project cover"
+    loading="lazy"
+  />
+</div>
 
   <div class="feature-body">
     <h3><span class="num">02.</span> Squid Game Text-Based Simulation (C++)</h3>
